@@ -1,3 +1,4 @@
+* Cleanup lint from the ntp_scanner files.
 * [Bug 1011] gmtime() returns NULL on windows where it would not under Unix.
 * Updated caljulian.c and prettydate.c from Juergen Perlinger.
 (4.2.5p139) 2008/11/11 Released by Harlan Stenn <stenn@ntp.org>
